[package]
name = "truck-node"
version.workspace = true
edition.workspace = true

# Truck node binary. Receives pan/tilt Control over LoRa and drives two gimbal servos at a fixed rate, reads a
# GPS for ground speed, and shows status on a shared-I2C OLED. Tasks are wired by latest-value Signals (lossy);
# servos are NEVER driven from the RX path — a dedicated fixed-rate servo task reads the freshest Control. Thin:
# orchestration only, all real logic lives in the library crates depended on below.
[dependencies]
proto = { workspace = true }
board = { workspace = true }
servo = { workspace = true }
lora-link = { workspace = true }
imu = { workspace = true }
display = { workspace = true }
gps = { workspace = true }

esp-hal = { workspace = true }
esp-rtos = { workspace = true }
esp-bootloader-esp-idf = { workspace = true }
embassy-executor = { workspace = true }
embassy-time = { workspace = true }
embassy-sync = { workspace = true }
embassy-embedded-hal = { workspace = true }
# `async` enables embedded-hal-bus's AsyncSpiDevice impl for ExclusiveDevice (the lora-phy SPI bound).
embedded-hal-bus = { workspace = true, features = ["async"] }
static_cell = { workspace = true }
heapless = { workspace = true }
micropb = { workspace = true }
esp-println = { workspace = true }
log = { workspace = true }

# Board variant is a pass-through feature (default XIAO); selecting `board-devkit` forwards to the board crate.
[features]
default = ["board-xiao"]
board-xiao = ["board/board-xiao"]
board-devkit = ["board/board-devkit"]
