[package]
name = "truck-node"
version.workspace = true
edition.workspace = true

# Truck node binary (Phase D: nRF52840, headless). Receives pan/tilt Control over LoRa and drives two gimbal
# servos at a fixed rate, reads a GPS for ground speed, and replies with Telemetry. Tasks are wired by
# latest-value Signals (lossy); servos are NEVER driven from the RX path — a dedicated fixed-rate servo task
# reads the freshest Control. The OLED moved to the goggle, so there is no display here and the single I2C
# device (the MPU-6050) uses a direct Twim (no shared_bus). Thin: orchestration only, all real logic lives in
# the library crates depended on below.
[dependencies]
proto = { workspace = true }
board = { workspace = true }
servo = { workspace = true }
lora-link = { workspace = true }
imu = { workspace = true }
gps = { workspace = true }
applog = { workspace = true }
nrf-adapters = { workspace = true }

embassy-executor = { workspace = true, features = ["platform-cortex-m", "executor-thread"] }
embassy-nrf = { workspace = true }
embassy-time = { workspace = true }
embassy-sync = { workspace = true }
cortex-m-rt = { workspace = true }
# The boot IMU home routine takes a `&mut Delay`; embedded-hal-async names the DelayNs trait it bounds on.
embedded-hal-async = { workspace = true }
static_cell = { workspace = true }
heapless = { workspace = true }
micropb = { workspace = true }
